# dynamic-neural-net

./: README.md
dynamic-neural-net/: Cargo.toml  config.toml
dynamic-neural-net/src/: main.rs
