[package]
name = "dynamic-neural-net"
version = "0.1.0"
edition = "2021"

[dependencies]
tch = "0.16.0"  # PyTorch bindings
tokio = { version = "1", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_derive = "1.0"
toml = "0.8.14"
warp = "0.3"  # Web framework
reqwest = "0.12.4"  # HTTP client